--- a/style.css
+++ b/style.css
@@ -1,3 +1,87 @@
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 html {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%;
+  font-weight: 700;
+}
+
+.container {
+  width: 60rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.section-title {
+  text-align: center;
+  margin-top: 2.4rem;
+  margin-bottom: 1.8rem;
+}
+
+.books-container {
+  margin-bottom: 2.4rem;
+  border: 2px solid #000;
+}
+
+.book {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.8rem;
+  font-size: 1.6rem;
+}
+
+.book:nth-child(odd) {
+  background-color: #e6e6e6;
+}
+
+.remove {
+  padding: 0.4rem;
+  border: 2px solid #000;
+  background: #fff;
+  font-weight: 700;
+  box-shadow: 0.4rem 0.2rem 0.2rem #000;
+  z-index: 9;
+}
+
+.partition {
+  height: 0.3rem;
+  background-color: #000;
+  width: 10rem;
+  margin: 0 auto;
+  margin-bottom: 1.8rem;
+}
+
+.form-title {
+  text-align: center;
+  margin-bottom: 1.8rem;
+}
+
+.form {
+  width: 30rem;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 0.8rem;
+}
+
+.form-control {
+  width: 100%;
+  font-size: 1.6rem;
+  border: 2px solid #000;
+  padding: 0.4rem;
+}
+
+.btn-submit {
+  align-self: flex-end;
+  background: none;
+  border: 2px solid #000;
+  font-weight: 700;
+  box-shadow: 0.4rem 0.2rem 0.2rem #000;
+  padding: 0.4rem;
 }
