--- a/style.css
+++ b/style.css
@@ -10,12 +10,39 @@ html {
   font-weight: 700;
 }
 
+body {
+  padding: 2.4rem;
+}
+
 .container {
-  width: 60rem;
+  width: 80rem;
   margin: 0 auto;
+}
+
+.section {
+  display: none;
+}
+
+.section--active {
+  display: block;
+}
+
+.header {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  justify-content: space-between;
+  border: 2px solid #000;
+  padding: 1.2rem;
+}
+
+.page-title {
+  font-size: 1.8rem;
+}
+
+.nav-links {
+  list-style: none;
+  display: flex;
+  gap: 1.2rem;
+  font-size: 1.8rem;
 }
 
 .section-title {
