--- a/style.css
+++ b/style.css
@@ -45,10 +45,15 @@ body {
   font-size: 1.8rem;
 }
 
+.nav-link {
+  cursor: pointer;
+}
+
 .section-title {
   text-align: center;
   margin-top: 2.4rem;
   margin-bottom: 1.8rem;
+  font-size: 2rem;
 }
 
 .books-container {
@@ -74,14 +79,6 @@ body {
   font-weight: 700;
   box-shadow: 0.4rem 0.2rem 0.2rem #000;
   z-index: 9;
-}
-
-.partition {
-  height: 0.3rem;
-  background-color: #000;
-  width: 10rem;
-  margin: 0 auto;
-  margin-bottom: 1.8rem;
 }
 
 .form-title {
@@ -111,4 +108,10 @@ body {
   font-weight: 700;
   box-shadow: 0.4rem 0.2rem 0.2rem #000;
   padding: 0.4rem;
+}
+
+.footer {
+  border: 2px solid #000;
+  padding: 1.2rem;
+  font-size: 1.8rem;
 }
