--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body {
 
 .section {
   display: none;
+  height: 70vh;
 }
 
 .section--active {
@@ -83,7 +84,10 @@ body {
 
 .form-title {
   text-align: center;
-  margin-bottom: 1.8rem;
+  margin-bottom: 6.4rem;
+margin-top: 3.6rem;
+font-size: 1.8rem;
+
 }
 
 .form {
@@ -91,7 +95,8 @@ body {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
+  gap: 2.4rem;
+  margin-bottom: 2.4rem;
 }
 
 .form-control {
