--- a/style.css
+++ b/style.css
@@ -115,6 +115,27 @@ font-size: 1.8rem;
   padding: 0.4rem;
 }
 
+/* contact infor  */
+
+.contact-container {
+  width: 60rem;
+  margin: 0 auto;
+}
+
+.description {
+  font-size: 1.8rem;
+}
+
+.contact-list {
+  padding-left: 4.8rem;
+  margin-top: 2.4rem;
+}
+
+.contact {
+  font-size: 1.6rem;
+  /* padding-left: 2.4rem; */
+}
+
 .footer {
   border: 2px solid #000;
   padding: 1.2rem;
