--- a/style.css
+++ b/style.css
@@ -35,6 +35,16 @@ body {
   padding: 1.2rem;
 }
 
+.year-con {
+  margin-top: 1.2rem;
+  display: flex;
+  flex-direction: row-reverse;
+}
+
+.year {
+  font-size: 1.6rem;
+}
+
 .page-title {
   font-size: 1.8rem;
 }
@@ -48,6 +58,10 @@ body {
 
 .nav-link {
   cursor: pointer;
+}
+
+.nav-link--active {
+  color: #4d4dff;
 }
 
 .section-title {
@@ -85,9 +99,8 @@ body {
 .form-title {
   text-align: center;
   margin-bottom: 6.4rem;
-margin-top: 3.6rem;
-font-size: 1.8rem;
-
+  margin-top: 3.6rem;
+  font-size: 1.8rem;
 }
 
 .form {
@@ -133,7 +146,6 @@ font-size: 1.8rem;
 
 .contact {
   font-size: 1.6rem;
-  /* padding-left: 2.4rem; */
 }
 
 .footer {
